# meridian

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SPEC.md  deploy.sh
.github/workflows/: ci.yml
docs/standards/: GUIDE.md  README.md  ousterhout.md  readable-code.md  rust-specifics.md
pipeline/: README.md  pyproject.toml
pipeline/src/: db.py  diagnose_concepts.py  fetch_filings.py  fetch_fx_rates.py  parse_xbrl_json.py  seed_demo.py
pipeline/tests/: conftest.py  test_db.py  test_fetch_filings.py  test_parse_xbrl_json.py
scripts/: README.md  pyproject.toml
scripts/src/: db.py  diagnose_concepts.py  fetch_filings.py  fetch_fx_rates.py  parse_xbrl_json.py  seed_demo.py
skills/: review-project-readiness.md
src/: app.rs  export.rs  lib.rs  main.rs  model.rs  query.rs
src/components/: mod.rs
src/data/: compare.rs  dashboards.rs  format.rs  mod.rs  reads.rs  tests.rs
src/pages/: about.rs  company.rs  compare.rs  coverage.rs  extensions.rs  mod.rs  quality.rs  search.rs
style/: main.css
