[package]
name = "meridian"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true }

axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "dep:rusqlite",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

# Silence a cargo-leptos wasm-build warning about the erased-components lint.
[package.metadata.cargo-all-features]
denylist = ["axum", "tokio", "tower", "tower-http", "leptos_axum", "rusqlite"]

[package.metadata.leptos]
output-name = "meridian"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
codegen-units = 1
panic = "abort"
lto = true
