[project]
name = "meridian-pipeline"
version = "0.1.0"
description = "Meridian data pipeline: fetch and parse ESEF filings into the SQLite cache"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jeffrey C. Wolf" }]
dependencies = [
    "xbrl-filings-api>=1.0",
    "httpx>=0.27",
]

[project.urls]
Repository = "https://github.com/jeffcwolf/meridian"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
