[project]
name = "meridian-scripts"
version = "0.1.0"
description = "Meridian data pipeline: fetch and parse ESEF filings into the SQLite cache"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xbrl-filings-api>=1.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
